<resources>
    <string name="app_name">Vegidel</string>
    <string name="okay">Okay</string>
    <string name="ok">Ok</string>
    <string name="login">Log In</string>
    <string name="welcome_to_vegidel">Welcome to <b>Vegidel</b></string>
    <string name="signup">Sign Up</string>
    <string name="email">*Email</string>
    <string name="logina">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_acoount_sign_up">Don’t have an account ? Sign Up</string>
    <string name="forgot_pasword">Forgot Pasword ?</string>
    <string name="signupa">Singup</string>
    <string name="already_have_an_account_sign_in">Already have an account ? Sign in</string>
    <string name="title_notifications">Notification</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="Home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dairy">Dairy</string>
    <string name="product">Products</string>
    <string name="fruit_and_vegetable">Fruit And Vegetable</string>
    <string name="bakery_and_grocery_n_comming_soon">Bakery and Grocery\n(Coming soon)</string>
    <string name="cart">Cart</string>
    <string name="do_you_want_to_logout">Do You Want To Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Continue</string>
    <string name="location">*Location</string>
    <string name="customer_type">*Customer Type</string>
    <string name="phone">*Mobile</string>
    <string name="fullname">*Full Name</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string-array name="location">
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
        <item>Custom</item>
    </string-array>
    <string-array name="customertype">
        <item>Hotel</item>
        <item>Vegetable</item>
    </string-array>
    <string-array name="kyctype">
        <item>PAN</item>
        <item>Aadhar</item>
        <item>Passport</item>
        <item>Driving License</item>
    </string-array>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBkBdTkikCX2u-ZCloZAozLc-tJ1bkLMvk</string>
    <string name="pick_location">Pin Location</string>
    <string name="Continue">Continue</string>
    <string name="DeliveryAddress">Delivery Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="invoice_address_is_also_a_delivery_address">Invoice address is also a delivery address</string>
    <string name="legal_documents">Legal Documents</string>
    <string name="gst_pan_aadhar_pasasport_driving_license_nfiles_are_mandatory_in_jpg_png_jpeg_format">(GST,(PAN/Aadhar/Pasasport/Driving License) files are\nmandatory in jpg,png,jpeg format.)</string>
    <string name="gst">GST</string>
    <string name="nofilechoosen">No file chosen</string>
    <string name="choose_file">Choose file</string>
    <string name="selected_kyc_document_s_number">Selected KYC Document\'s Number</string>
    <string name="select_file">Select File</string>
    <string name="submit">Submit</string>
    <string name="person_of_correspondence">Person of Correspondence</string>
    <string name="kyc_documents">*KYC Documents</string>
    <string name="imageview">imageView</string>
    <string name="symbol">₹ %s</string>
    <string name="no_products">No Products</string>
    <string name="product_detail">Product Detail</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="_0">0</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="add_to_cart">Add To Cart</string>

</resources>