<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawerLayout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        tools:context=".ui.activities.DashboardActivity">

        <include
            android:id="@+id/contentdash"
            layout="@layout/content_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimaryDark"
            android:fitsSystemWindows="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp">


                <TextView
                    android:id="@+id/shop"
                    style="@style/H520Pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_56sdp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/Home"
                    android:textColor="@color/White"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile"
                    style="@style/H520Pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/profile"
                    android:textColor="@color/White"
                    app:layout_constraintStart_toStartOf="@id/shop"
                    app:layout_constraintTop_toBottomOf="@id/shop" />

                <TextView
                    android:id="@+id/notification"
                    style="@style/H520Pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/title_notifications"
                    android:textColor="@color/White"
                    app:layout_constraintStart_toStartOf="@id/profile"
                    app:layout_constraintTop_toBottomOf="@id/profile" />

                <TextView
                    android:id="@+id/about"
                    style="@style/H520Pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/about"
                    android:textColor="@color/White"
                    app:layout_constraintStart_toStartOf="@id/notification"
                    app:layout_constraintTop_toBottomOf="@id/notification" />

                <TextView
                    android:id="@+id/logout"
                    style="@style/H520Pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/segoe"
                    android:text="@string/logout"
                    android:textColor="@color/White"
                    app:layout_constraintStart_toStartOf="@id/about"
                    app:layout_constraintTop_toBottomOf="@id/about" />

                <ImageView
                    android:id="@+id/tv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_48sdp"
                    android:layout_marginEnd="@dimen/_19sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_cencel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>